Added visualization of flipped cards via event handlers and accessing DOM nodes

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 	<p>Concentration, one of several engaging games we have implemented, can be played by one or more players.<br><br>
 	To learn more about us or our other online games, follow us on <a class="a_reg" href="#">twitter</a> or <a class="a_reg" href="#">instagram</a>. You may also reach us by <a class="a_reg" href="#">email</a>.</p>
 
-	<div id="game">
+<!-- <div id="game">
 		<img src="images/back.png" alt="Queen of Diamonds">
 		<img src="images/back.png" alt="Queen of Hearts">
 		<img src="images/back.png" alt="King of Diamonds">
 		<img src="images/back.png" alt="King of Hearts">
-	</div>
+	</div> -->
+	<div id="game-board" class="board clearfix"></div>
 	</main>
 	<footer class="clearfix">
 		<p class="copyright">Copyright 2017</p>
